--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,3 +19,12 @@ spring:
     username: root
     password: mariadb
     driver-class-name: org.mariadb.jdbc.Driver
+
+  # MyBatis 설정
+  mybatis:
+    #sql file location
+  mapper-locations: classpath:mapper/**/*.xml
+  # /** 이후 경로에 모든 파일/폴더들 /* 파일명이 뭐든지 쓰겠다
+  type-aliases-package: com.spring.mvcproject
+  configuration:
+   map-underscore-to-camel-case: true
