--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,8 @@ server:
 
 logging:
   level:
-    root: info
+    root: info # spring all log
+    com.spring.mvcproject: debug # 우리 로그만 deg까지 보겠다
 
 #logging.level.org.springframework.web.servlet.DispatcherServlet=DEBUG
 
